# qr.datael.co.uk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
src/: main.rs
src/components/: qr_code.rs
