[package]
name = "qr-datael-co-uk-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.5", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
qrcode = "0.14"
image = "0.25.5"
base64 = "0.22.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3.70"
